# Mnemosyne

./: .env.example  .gitignore  README.md  docker-compose.yml  git_push.py  push.bat
.github/workflows/: cd.yml  ci.yml  deploy.yml
api/: Dockerfile  requirements.txt
api/app/: main.py
api/app/api/routes/: health.py  internal.py  memories.py
api/app/core/: config.py
api/app/db/: database.py
api/app/models/: models.py
api/app/services/: auth.py  distillation_service.py  embedding_service.py  memory_service.py  pinecone_client.py  redis_cache.py
cli/: setup.py
cli/mnemosyne_cli/: cli.py
dashboard/: .dockerignore  Dockerfile  netlify.toml  next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx  providers.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/docs/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/pricing/: page.tsx
dashboard/components/: api-keys.tsx  memory-browser.tsx  memory-search.tsx  usage-stats.tsx
dashboard/components/ui/: card.tsx
dashboard/lib/: api.ts
dashboard/styles/: globals.css
scripts/: setup-github-secrets.ps1  setup-local.sh
sdk/: README.md  pyproject.toml
sdk/examples/: basic_usage.py
sdk/src/mnemosyne/: __init__.py  async_client.py  client.py  exceptions.py  memory.py
sdk/src/mnemosyne/integrations/: langchain.py
tests/: test_e2e.py
worker/: Dockerfile  distiller.py  requirements.txt
