[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mnemosyne-memory"
version = "0.1.0"
description = "Python SDK for Mnemosyne - The AI Memory Layer"
authors = ["Mnemosyne Team <team@mnemosyne.dev>"]
readme = "README.md"
license = "MIT"
homepage = "https://mnemosyne.dev"
repository = "https://github.com/mnemosyne-dev/mnemosyne"
documentation = "https://docs.mnemosyne.dev"
keywords = ["ai", "memory", "agents", "llm", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.26.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.9.0"

# Optional dependencies for local mode
chromadb = { version = "^0.4.0", optional = true }
ollama = { version = "^0.1.0", optional = true }

# Framework integrations
langchain-core = { version = "^0.1.0", optional = true }
langchain = { version = "^0.1.0", optional = true }

crewai = { version = "^0.1.0", optional = true }
google-adk = { version = "^0.1.0", optional = true }

[tool.poetry.extras]
local = ["chromadb", "ollama"]
langchain = ["langchain-core", "langchain"]
crewai = ["crewai"]
adk = ["google-adk"]
all = ["chromadb", "ollama", "langchain-core", "langchain", "crewai", "google-adk"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
respx = "^0.20.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
